# playground-dorogon

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
src/: lib.cpp  main.cpp
test/: CMakeLists.txt
tests/src/: cmake_init_test.cpp
